# breadnbutter

./: .gitignore  README.md  alter_python_repl4fun.py  git_do_not_stage_me  git_stage_me  group_by_name.py  group_by_name_variation.py  how2setup_venv_notes  how_are_my_stocks_doing.py  intro2django_readit  list_comprehension_01.py  merge_nested_dicts.py  port.py  port2.py  read_data_from_file_into_etl_db.py  read_port.py  read_port_into_list_of_dicts.py  read_port_into_list_of_tuples.py  requirements.txt  sketches_of_type_converters  split_a_list_across_even_sized_chunks.py  swap_keys_of_dict.py  test_git_reset  unicode_essentials.py  what_stocks_do_i_own.py
Big_Ideas_Little_Python_Code/: How to make iPython work in a virtualenv  big_ideas_little_code_modern_python_step_by_step  requirements.txt
Data/: portfolio2.csv  portfolio3.csv
SOAP_WS/: test_cases_transformed
SOAP_WS/wstools-develop/: .coveralls.yml  .gitignore  .mailmap  .travis.yml  LICENSE.txt  Makefile  README.rst  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
SOAP_WS/wstools-develop/tests/: config.txt  test_wsdl.py  test_wstools_net.py
SOAP_WS/wstools-develop/tests/data/: ip2geo.wsdl  soapi-1.63.0-dlw.wsdl  soapi-1.63.0-re.wsdl  zip2geo.wsdl
asyncio_py3.6/: adv_func_args_unpacking.py
bring_unix_power_into_windows/: manifest.csv  step_1_basics  swiss_army_knife.py
builtins/: App Dev Cloud Data Center Mobile Open Source Secur  accesing_dictionary_with_class_attribute.py  accidentally_modify_data_structure_once_thoug.py  defaultdict_basic.py  make_obj_callable.py  (+16 more)
(+454 files in other folders)
