[metadata]
name = wstools
author = Makina Corpus
author-email = python@makina-corpus.com
maintainer = Sorin Sbarnea
maintainer-email = sorin.sbarnea@gmail.com
summary = WSDL parsing services package for Web Services for Python.
description-file = README.rst
home-page = https://github.com/pycontribs/wstools
license = BSD
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP

keywords =
    api
    wstools
    wdsl
    web

[files]
packages =
    wstools

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[egg_info]
egg_base = .

[aliases]
test=pytest

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = docs
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[flake8]
max-line-length=160
enable-extensions = H106,H203,H904
exclude=build,.eggs,.tox
statistics=yes
ignore=D,E402,H405,H,B001,B002

[pbr]
warnerrors = true